# pro-django

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: __init__.py  base.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
